objects/BLN_Error__c.object
<CustomObject>
    <description>Every error in system as an error code, error description, remedy description
Error Code should start with E for eventdex errors, M - Matchleads errors B - Lead Retrieval Errors S - Scan Attendee

E - Eventdex
TKT - Module Name
001 - Error Number

E_TKT_001 - Eventdex - Ticket Module - Error 001</description>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Name</label>
        <picklist>
            <picklistValues>
                <fullName>Matchleads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventdex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scanattendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadretrieval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Remedy__c</fullName>
        <label>Error Remedy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BLN Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Er_{0000000}</displayFormat>
        <label>BLN Eoor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>